# sublight

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
docs/: architecture.md  commercial-readiness.md  development-plan.md  getting-started.md  product-plan.md  tutorial-video-script.md
examples/: cyan-style.json  sample.srt  sample.sublight.json
packaging/: sublight-gui.spec
scripts/: create_tutorial_video.py
site/: index.html  styles.css
src/sublight/: __init__.py  cli.py  config.py
src/sublight/core/: __init__.py  highlights.py  keywords.py  models.py  project.py  spans.py  srt.py
src/sublight/exporters/: __init__.py  ass_exporter.py  ffmpeg.py  video_exporter.py
src/sublight/gui/: __init__.py  app.py  export_worker.py  main_window.py
src/sublight/styles/: __init__.py  ass.py  presets.py  schema.py
tests/: test_config.py  test_core.py  test_exporters.py  test_gui.py  test_project.py  test_styles.py  test_tutorial_assets.py
