[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sublight"
version = "0.1.0"
description = "Generate keyword-highlighted subtitles, overlays, and burned-in videos from SRT files."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "diyewu" }
]
keywords = [
  "subtitle",
  "srt",
  "ass",
  "video",
  "highlight",
  "capcut",
  "jianying"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Video",
  "Topic :: Text Processing"
]

[project.urls]
Homepage = "https://github.com/diyewu/sublight"
Repository = "https://github.com/diyewu/sublight"
Issues = "https://github.com/diyewu/sublight/issues"

[project.scripts]
sublight = "sublight.cli:main"
sublight-gui = "sublight.gui.app:main"

[project.optional-dependencies]
gui = ["PySide6>=6.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/sublight"]
